niggas in paris 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-portfolio",
-	"homepage": "https://Laurenccee/.github.io/Portfolio/",
+	"homepage": "https://Laurenccee.github.io/Portfolio/",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -9,8 +9,8 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy":"gh-pages -d dist "
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@radix-ui/react-progress": "^1.1.2",
