--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"@iconify/react": "^5.2.1",
 		"@radix-ui/react-progress": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-toast": "^1.2.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.6.3",
+		"geist": "^1.3.1",
 		"gh-pages": "^6.3.0",
 		"lucide-react": "^0.487.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-intersection-observer": "^9.16.0",
 		"react-router-dom": "^7.4.1",
 		"tailwind-merge": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7"
